samples/_failures_safe/1761334073_c44166_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4fefe426.c: In function ‘main’:
./samples/SAFE/__tmp_4fefe426.c:161:5: error: expected declaration or statement at end of input
  161 |     printf("INFO entries: %d\n", info_count);
      |     ^~~~~~
